starlark-rust/starlark/src/typing/golden/call_not_callable.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib tests
# ```

Code:
def foo(x: list):
    x()

Error:
error: Call to a non-callable type `list[typing.Any]`
 --> filename:3:5
  |
3 |     x()
  |     ^^^
  |
